# rust

./: .gitignore  Cargo.toml
chapter-1/src/: game.rs
chapter-1/src/game/: init.rs
chapter-2/: Cargo.toml
chapter-2-rev/: Cargo.toml
chapter-2-rev/docs/: ecs.md
chapter-2-rev/src/: main.rs
chapter-2-rev/src/actors/: background_actor.rs  mod.rs  ship_actor.rs
chapter-2-rev/src/components/: sprite_component.rs
chapter-2-rev/src/core/: mod.rs
chapter-2-rev/src/game/: game_loop.rs  init_sdl2.rs  mod.rs  world.rs
chapter-2-rev/src/math/: vector_2.rs
chapter-2/src/: actor.rs  components.rs  game.rs  main.rs
cubesat/src/: lib.rs  main.rs
design-patterns/: Cargo.toml
design-patterns/src/: lib.rs
fylesystem-lite/: Cargo.toml
fylesystem-lite/src/: file_system.rs  fyle_system.rs  main.rs  one_in.rs
game-development/chapter-1/: Cargo.toml
game-development/chapter-2/: Cargo.toml
grep-lite/: Cargo.toml
grep-lite/files/: 1.txt
grep-lite/src/: lib.rs  main.rs  parser.rs
rust-brain-teasers/: Cargo.toml
rust-brain-teasers/standard_input/: Cargo.toml
rust-brain-teasers/three_and_a_bit/: Cargo.toml
rust-brain-teasers/type_conversion/: Cargo.toml
rust-crash-course/: Cargo.toml
rust-crash-course/src/: main.rs  pointer.rs  threads.rs
src/: area_rect.rs  circle.rs  game.rs  geometric_forms.rs  main.rs  misc.rs  oop.rs  pointer.rs  sum.rs
src/circle/: impl_shape_utils.rs  radius.rs
src/game/: init.rs
src/geometric_forms/: circle.rs  shape_utils.rs
src/misc/: counter_finite.rs
src/oop/: state.rs
src/sum/: sum_int.rs
(+69 files in other folders)
